refactored version history into list form;
removed tag column in member lists;
displayed version history of class on class page;
displayed version history of members in description section

--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -212,6 +212,15 @@ table.member-list .col-return-type {
 	font-family : Consolas, "Lucida Console", monospace;
 }
 
+.version-list {
+	margin-left: 0.5em;
+	font-family : Consolas, "Lucida Console", monospace;
+}
+
+td .version-list {
+	margin-left: 0;
+}
+
 .version-added {
 	color: DarkGreen;
 }
