--- a/generate/resources/templates/YieldFunctionList.html
+++ b/generate/resources/templates/YieldFunctionList.html
@@ -3,14 +3,8 @@
 		<th class="col-return-type">Returns</th>
 		<th class="col-icon"></th>
 		<th class="col-name">YieldFunction</th>
-	{{ if memberType.HasTags then }}
-		<th class="col-tags">Tags</th>
-	{{ end }}
-	{{ if memberType.HasAdded then }}
-		<th class="col-version-added">Added</th>
-	{{ end }}
-	{{ if memberType.HasRemoved then }}
-		<th class="col-version-removed">Removed</th>
+	{{ if memberType.HasVersions then }}
+		<th class="col-history">History</th>
 	{{ end }}
 	</tr>
 {{ for i = 1,#memberType.List do }}
@@ -21,33 +15,9 @@
 		<td class="col-icon">{{include: 'resources/templates/MemberIcon.html'}}</td>
 	{{ local arguments = member.Arguments }}
 		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= html(format.url.member(member.Name)) }}">{{= html(member.Name) }}</a> {{include: 'resources/templates/Arguments.html' }}</td>
-	{{ if #member.TagList > 0 then }}
-		{{ local tags = member.TagList }}
-		<td class="col-tags">{{include: 'resources/templates/Tags.html'}}</td>
-	{{ elseif memberType.HasTags then }}
-		<td class="col-tags"></td>
-	{{ end }}
-	{{ if member.VersionAdded then }}
-		<td class="col-version-added">
-		{{ for i = 1,#member.VersionAdded do }}
-			{{ local added = true }}
-			{{ local version = member.VersionAdded[i] }}
-			{{include: 'resources/templates/Version.html'}}
-		{{ end }}
-		</td>
-	{{ elseif memberType.HasAdded then }}
-		<td class="col-version-added"></td>
-	{{ end }}
-	{{ if member.VersionRemoved then }}
-		<td class="col-version-removed">
-		{{ for i = 1,#member.VersionRemoved do }}
-			{{ local added = false }}
-			{{ local version = member.VersionRemoved[i] }}
-			{{include: 'resources/templates/Version.html'}}
-		{{ end }}
-		</td>
-	{{ elseif memberType.HasRemoved then }}
-		<td class="col-version-removed"></td>
+	{{ if memberType.HasVersions then }}
+		{{ local versions = member.Versions }}
+		<td class="col-versions">{{include: 'resources/templates/VersionList.html'}}</td>
 	{{ end }}
 	</tr>
 {{ end }}
