handled some edge cases more gracefully;
added message if class has or inherits no members;
omit tree nav if class has 0 superclass and subclasses

--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -45,6 +45,9 @@
 				{{ end }}
 					<div id="members">
 						<h2>Members</h2>
+				{{ if #class.Members == 0 then }}
+						<p>This class has no members.</p>
+				{{ end }}
 				{{ for i = 1,#class.Members do }}
 					{{ local memberType = class.Members[i] }}
 					{{ local inherited = memberType.Inherited }}
@@ -139,6 +142,7 @@
 				{{ end }}
 					</div>
 				</div>
+			{{ if #class.Superclasses > 0 or #class.Subclasses > 0 then }}
 				<div id="hierarchy-nav">
 				{{ if #class.Superclasses > 0 then }}
 					<div id="superclasses">
@@ -165,6 +169,7 @@
 					</div>
 				{{ end }}
 				</div>
+			{{ end }}
 			</div>
 		</div>
 	</div>
