changed enum items header

--- a/generate/resources/templates/enum.html
+++ b/generate/resources/templates/enum.html
@@ -39,7 +39,7 @@
 					</div>
 				{{ end }}
 					<div id="enum-items">
-						<h2>Items</h2>
+						<h2>Enum Items</h2>
 					{{ if #enum.Items == 0 then }}
 						<p>This enum has no items.</p>
 					{{ else }}
