--- a/generate/resources/templates/PropertyList.html
+++ b/generate/resources/templates/PropertyList.html
@@ -3,7 +3,7 @@
 		<th class="col-icon"></th>
 		<th class="col-name">Property</th>
 		<th class="col-value-type">Type</th>
-	{{ if memberType.HasVersions then }}
+	{{ if memberType.HasHistory then }}
 		<th class="col-history">History</th>
 	{{ end }}
 	</tr>
@@ -14,9 +14,9 @@
 		<td class="col-icon">{{include: 'resources/templates/MemberIcon.html'}}</td>
 		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= html(format.url.member(member.Name)) }}">{{= html(member.Name) }}</a></td>
 		<td class="col-value-type"><a class="api-value-type" href="{{= html(format.url.type(member.ValueType)) }}">{{= html(member.ValueType) }}</a></td>
-	{{ if memberType.HasVersions then }}
-		{{ local versions = member.Versions }}
-		<td class="col-versions">{{include: 'resources/templates/VersionList.html'}}</td>
+	{{ if memberType.HasHistory then }}
+		{{ local history = member.History }}
+		<td class="col-history">{{include: 'resources/templates/HistoryList.html'}}</td>
 	{{ end }}
 	</tr>
 {{ end }}
