--- a/generate/resources/templates/enum.html
+++ b/generate/resources/templates/enum.html
@@ -15,7 +15,7 @@
 	<div id="ref-container">
 		<div id="ref-box">
 			<div id="header">
-				<span class="api-enum-icon"></span><h1>{{= html(enum.Name) }}</h1>{{local versions=enum.Versions}}{{include: 'resources/templates/VersionList.html' }}
+				<span class="api-enum-icon"></span><h1>{{= html(enum.Name) }}</h1>{{local history=enum.History}}{{include: 'resources/templates/HistoryList.html' }}
 				<span id="header-items">
 				{{ local icon = 3 }}
 					<a id="return-link" href="/api">Back to hierarchy{{include: 'resources/templates/MemberIcon.html' }}</a>
@@ -59,7 +59,7 @@
 								<td class="col-value"><span class="api-enum-item-value">{{= html(enum.Items[i].Value) }}</span></td>
 								<td class="col-name"><span class="api-enum-item-name">{{= html(enum.Items[i].Name) }}</span></td>
 							{{ if enum.HasHistory then }}
-								<td class="col-history">{{local versions=enum.Versions}}{{include: 'resources/templates/VersionList.html' }}</td>
+								<td class="col-history">{{local history=enum.History}}{{include: 'resources/templates/HistoryList.html' }}</td>
 							{{ end }}
 								<td class="col-description">{{= enum.Items[i].Description or 'No description' }}</td>
 							</tr>
