fixed incorrect css class name

--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -201,12 +201,12 @@ table.member-list .col-return-type {
 	font-family : Consolas, "Lucida Console", monospace;
 }
 
-.version-list {
+.history-list {
 	margin-left: 0.5em;
 	font-family : Consolas, "Lucida Console", monospace;
 }
 
-td .version-list {
+td .history-list {
 	margin-left: 0;
 }
 
