--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -80,22 +80,10 @@
 							{{ elseif subtype == 'Arguments' then }}
 								{{ local arguments = item.Arguments }}
 								Changed arguments of {{include: 'resources/templates/DiffItemName.html'}} {{include: 'resources/templates/Arguments.html'}}
-								<ol class="diff-arg-list">
-							{{ for i = 1,#arg do }}
-								{{ local d = arg[i] }}
-								{{ if d[1] == 1 then }}
-									{{ local argument = d[3] }}
-									<li>Inserted {{include: 'resources/templates/Argument.html'}} as {{= html(format.ordinal(d[2])) }} argument</li>
-								{{ elseif d[1] == 2 then }}
-									<li>Removed {{= html(format.ordinal(d[2])) }} argument</li>
-								{{ elseif d[1] == 3 then }}
-									<li>Swapped {{= html(format.ordinal(d[2])) }} and {{= html(format.ordinal(d[3])) }} arguments</li>
-								{{ elseif d[1] == 4 then }}
-									{{ local argument = d[3] }}
-									<li>Replaced {{= html(format.ordinal(d[2])) }} argument with {{include: 'resources/templates/Argument.html'}}</li>
-								{{ end }}
-							{{ end }}
-								</ol>
+								<ul class="diff-arg-list">
+									{{ local arguments = arg }}
+									<li>Changed to {{include: 'resources/templates/Arguments.html'}}</li>
+								</ul>
 							{{ elseif subtype == 'Value' then }}
 								Changed value of enum item {{include: 'resources/templates/DiffItemName.html'}} from {{= html(item.Value) }} to {{= html(arg) }}
 							{{ elseif subtype == 'Security' then }}
