made permalink css more generic

--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -251,7 +251,7 @@ td .history-list {
 	display : inline;
 }
 
-#diff-versions > li:hover > a.permalink:before {
+*:hover > a.permalink:before {
 	content : ' ¶';
 }
 
