changed default title

--- a/generate/resources/templates/index.html
+++ b/generate/resources/templates/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	{{= resources['favicon16'] }}
 
-	<title>Roblox API Reference</title>
+	<title>ROBLOX API Reference</title>
 	{{= resources['ref.css'] }}
 	{{= resources['jquery.js'] }}
 	{{= resources['fuse.js'] }}
