--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	{{= resources['favicon16'] }}
 
-	<title>Roblox API Differences</title>
+	<title>ROBLOX API Differences</title>
 	{{= resources['ref.css'] }}
 	{{= resources['jquery.js'] }}
 	{{= resources['collapse.js'] }}
