improved footer with site links

--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -25,12 +25,12 @@ h3 {
 	font-weight : bold;
 }
 
-ul {
+#ref-container ul {
 	margin-left  : 0;
 	padding-left : 40px;
 }
 
-ul li {
+#ref-container ul li {
 	padding-top : 6px;
 	font-size   : 12px;
 }
@@ -95,21 +95,6 @@ table th {
 #return-link .api-member-icon {
 	margin-right : 0px;
 	margin-left  : 4px;
-}
-
-#footer {
-	width            : 900px;
-	margin           : 8px auto;
-	padding          : 1em 0;
-	background-color : rgb(255,255,255);
-	color            : rgb(65,85,65);
-	text-align       : left;
-	border           : 1px solid rgb(218,218,218);
-	border-radius    : 10px;
-}
-
-#footer > * {
-	margin : 0 1em;
 }
 
 #searchMessage {
@@ -321,4 +306,41 @@ code {
 
 .api-argument {
 	white-space : nowrap;
+}
+
+/* footer */
+#footer {
+	width            : 900px;
+	margin           : 8px auto;
+	background-color : rgb(255,255,255);
+	color            : rgb(65,85,65);
+	text-align       : left;
+	border           : 1px solid rgb(218,218,218);
+	border-radius    : 10px;
+    display          : table;
+    border-spacing   : 1em;
+}
+
+#footer ul {
+    margin: 0;
+    padding: 0;
+}
+
+#footer ul li {
+    display     : inline-block;
+    margin-left : 20px;
+    padding     : 0;
+}
+
+#footer ul li:first-child {
+    margin-left: 0;
+}
+
+#footer > * {
+    display     : table-cell;
+    white-space : nowrap;
+}
+
+#footer > *:first-child {
+    width:100%;
 }
