--- a/generate/resources/templates/footer.html
+++ b/generate/resources/templates/footer.html
@@ -1,3 +1,12 @@
 <div id="footer">
-	<span>Style is totally not a blatant <a href="http://qt-project.org/">Qt Project</a> rip-off.</span>
+	<div>
+		<ul>
+			<li><a href="/api">Main</a></li>
+			<li><a href="/api/about.html">About</a></li>
+			<li><a href="/api/faq.html">FAQ</a></li>
+			<li><a href="https://github.com/Anaminus/roblox-api-ref">Github</a></li>
+			<li><a href="https://www.roblox.com/">ROBLOX</a></li>
+		</ul>
+	</div>
+	<span>Style is totally not a blatant <a href="http://qt-project.org/">Qt Project</a> rip-off</span>
 </div>
